[package]
name = "light-merkle-tree"
version = "0.1.0"
edition = "2021"
description = "Sparse Merkle tree implementation"
license = "Apache-2.0"

[dependencies]
anchor-lang = { git = "https://github.com/coral-xyz/anchor", rev = "1c6f86e5f7793ce6adefe9cbfa11939647c509ce" }
bytemuck = "1.13.1"

[dev-dependencies]
sha2 = "0.10"

[features]
solana = []
